--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -13,4 +13,8 @@
     <string name="country">Страна</string>
     <string name="address">АДРЕС</string>
     <string name="dell_db">Dell DB</string>
+    <string name="settings">Настройки</string>
+    <string name="lists">Справочники</string>
+    <string name="country_codes">Страны коды</string>
+    <string name="empty">Нет записей</string>
 </resources>
